# takeoff-app

./: .gitignore  AGENTS.md  README.md  pyproject.toml
app/: cli.py
app/application/: access_control.py  add_takeoff_line.py  authenticate_user.py  build_sample_takeoff.py  delete_takeoff_line.py  diff_takeoff_versions.py  errors.py  export_revision_bundle.py  generate_project_invoice.py  generate_revision_report.py  generate_takeoff_from_plan_reading.py  generate_takeoff_pdf.py  generate_takeoff_report_output.py  import_items_from_csv.py  input_sources.py  inspect_takeoff.py  items_catalog.py  list_takeoff_lines.py  load_takeoff.py  projects.py  render_takeoff.py  render_takeoff_from_snapshot.py  render_takeoff_report.py  resolve_takeoff.py  save_takeoff.py  save_takeoff_from_input.py  seed_takeoff_from_template.py  summarize_project.py  templates.py  update_takeoff_line.py
app/config/: __init__.py
app/domain/: __init__.py  derive_takeoff_quantities.py  derived_quantities.py  fixture_mapping.py  input_kind.py  item.py  money.py  output_format.py  project.py  (+13 more)
docs/: ApiMVP.md  Architecture.md  BusinessRules.md  CLI.md  DataFlow.md  DataModel.md  Decisions.md  FrontendMVP.md  Roadmap.md  SRS.md  SystemDesign.md  commands.rtf
frontend/: package-lock.json  package.json  vite.config.ts
inputs/: Items.csv  takeoff.json
scripts/: _sample_takeoff.py  render_sample.py
tests/: test_architecture_imports.py  test_cli_access_control.py  test_cli_fixture_mappings.py  test_cli_items.py  test_cli_project_overrides.py  test_cli_render.py  test_cli_save_validation.py  test_cli_takeoff_generation.py  test_cli_takeoff_line_targeting.py  test_cli_validation.py  test_cli_validation_more.py  test_debug_json_renderer.py  test_derive_takeoff_quantities.py  test_fixture_mapping.py  test_fixture_mapping_repositories.py  test_generate_takeoff_from_plan_reading.py  test_http_api.py  test_import_items_from_csv.py  test_money.py  test_pdf.py  test_reporting_builder.py  test_seed_takeoff_from_template.py  test_takeoff.py  test_takeoff_json_loader.py  test_takeoff_line.py  test_takeoff_line_identity_migration.py  test_templates.py  test_totals.py  test_version_diff_and_revision_report.py
(+75 files in other folders)
