[project]
name = "takeoff-app"
version = "0.1.0"
description = "Local Take-Off app for Leza's Plumbing (Streamlit + SQLite + ReportLab)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "app"
exclude = "(.venv|tests/fixtures)"
