[project]
name = "takeoff-app"
version = "0.1.0"
description = "Local Take-Off app for Leza's Plumbing (Streamlit + SQLite + ReportLab)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.2,<0.136",
    "httpx>=0.28.1,<0.29",
    "itsdangerous>=2.2.0,<3",
    "starlette>=1.0.0,<1.1",
    "uvicorn>=0.42.0,<0.43",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "app"
exclude = "(.venv|tests/fixtures)"
